# src/main/java/com/agpaluch/exchange/currency/entities/Account.java
@@ -6,8 +6,9 @@ import org.springframework.data.annotation.CreatedDate;
 import javax.persistence.CascadeType;
 import javax.persistence.Entity;
 import javax.persistence.JoinColumn;
-import javax.persistence.OneToOne;
-import java.time.LocalDateTime;
+import javax.persistence.OneToMany;
+import java.time.Instant;
+import java.util.List;
 
 
 @Entity
@@ -21,9 +22,9 @@ public class Account extends AbstractEntity {
     private String accountNumber;
 
     @CreatedDate //TODO????
-    private LocalDateTime createdOn;
+    private Instant createdDate;
 
-    @OneToOne(cascade = CascadeType.ALL)
-    @JoinColumn(name = "account_balance_id", referencedColumnName = "id")
-    private AccountBalance accountBalance;
+    @OneToMany(cascade = CascadeType.ALL)
+    @JoinColumn(name = "account_id")
+    private List<AccountBalance> accountBalance;
 }
